tests/invalid_syntax/test_binary_chain_invalid.aphi
/*
Demonstrates: Invalid use of binary operators
*/

int x;

procedure main {
    x = 1 + 2 + 3;
}